...
        <scene sceneID="Fou-w1-SwV">
            <objects>
                <viewController id="TeK-fG-TkS" customClass="CreateTodoViewController" customModule="Wunderlist" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="wxF-PQ-0Zn">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                                                            <segment title="None"/>
                                                            <segment title="Daily"/>
                                                            <segment title="Weekly"/>
                                                            <segment title="Monthly"/>
                                                        </segments>
...
                        <viewLayoutGuide key="safeArea" id="uBh-gJ-bjO"/>
                    </view>
                    <navigationItem key="navigationItem" title="Create a List" largeTitleDisplayMode="always" id="U7s-sQ-zSx">
                        <barButtonItem key="backBarButtonItem" title="Cancel" id="A1q-Y7-SDb"/>
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="OfU-L5-sG1">
...
                                                        </constraints>
                                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <state key="normal" title="Save"/>
                                                        <connections>
                                                            <action selector="updateTodo:" destination="zKq-E1-p0w" eventType="touchUpInside" id="anS-dt-gKa"/>
...
                                        <color key="backgroundColor" name="deselectedBlue"/>
                                        <segments>
                                            <segment title="Register"/>
                                            <segment title="Log In"/>
                                        </segments>
                                        <color key="tintColor" red="0.2430099547" green="0.48630940909999998" blue="0.69402945039999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0rU-CW-iNg">
                                        <rect key="frame" x="0.0" y="159" width="374" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="LoginViewController.passwordTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
...
